[package]
name = "grss"
version = "0.1.0"
description = "A simple grep tool written in Rust"
keywords = ["grep", "cli-tools", "search"]
categories = ["command-line-utilities"]
repository = "https://github.com/hlisdero/grss"
homepage = "https://github.com/hlisdero/grss"
authors = ["Horacio Lisdero Scaffino <hlisdero@users.noreply.github.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"

[dev-dependencies]
assert_cmd = "2.0.7"
assert_fs = "1.0.10"
predicates = "2.1.5"
